Creato con Colaboratory

--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+ukPeKZ5GWnNKG2AWUh59"
+      "authorship_tag": "ABX9TyPZXqxCe2XlsbUtra2zY7lF"
     },
     "kernelspec": {
       "name": "ir",
@@ -50,6 +50,18 @@
         "\n",
         "\n",
         "<font size=\"2\"> [*NASA images*](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) *created by Jesse Allen, using Landsat data provided by the United States Geological Survey and ASTER data provided courtesy of NASA/GSFC/METI/ERSDAC/JAROS, and U.S./Japan ASTER Science Team. Caption by Michon Scott.*</font> "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TgoQR_6kQXu_"
+      },
+      "source": [
+        "<p float=\"left\">\n",
+        "  <img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=\"300\" />\n",
+        "  <img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=\"300\" /> \n",
+        "</p>"
       ]
     },
     {
