Creato con Colaboratory

--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZXqxCe2XlsbUtra2zY7lF"
+      "authorship_tag": "ABX9TyO5j1BL9YrS4GanRJp+hQQ2"
     },
     "kernelspec": {
       "name": "ir",
@@ -58,7 +58,7 @@
         "id": "TgoQR_6kQXu_"
       },
       "source": [
-        "<p float=\"left\">\n",
+        "<p align=\"middle\">\n",
         "  <img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=\"300\" />\n",
         "  <img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=\"300\" /> \n",
         "</p>"
