Creato con Colaboratory

--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfs4PAlo1lpLOBQJZen9QF"
+      "authorship_tag": "ABX9TyN4I1ZwQsDES5/g82i9F5o3"
     },
     "kernelspec": {
       "name": "ir",
@@ -68,7 +68,7 @@
         "mato_grosso_1992_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\"\n",
         "mato_grosso_2006_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\""
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
         "download.file(mato_grosso_1992_url, \"Mato_Grosso_1992.jpg\")\n",
         "download.file(mato_grosso_2006_url, \"Mato_Grosso_2006.jpg\")"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -119,14 +119,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l10HaqN7AZAT"
+        "id": "l10HaqN7AZAT",
+        "outputId": "876cc2fe-a90e-4f08-cda7-e2202865f39d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "packages <- c(\"raster\", \"RStoolbox\", \"ggplot2\", \"gridExtra\")\n",
         "install.packages(packages)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Installing packages into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘numDeriv’, ‘SQUAREM’, ‘lava’, ‘prodlim’, ‘gower’, ‘ipred’, ‘timeDate’, ‘plyr’, ‘ModelMetrics’, ‘recipes’, ‘pROC’, ‘iterators’, ‘sp’, ‘caret’, ‘XML’, ‘geosphere’, ‘reshape2’, ‘rgeos’, ‘rgdal’, ‘doParallel’, ‘foreach’, ‘RcppArmadillo’\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -142,13 +159,88 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PTJfZZmyt8Gi"
+        "id": "PTJfZZmyt8Gi",
+        "outputId": "de9813de-78a5-4700-dab2-b7a4e656274e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 181
+        }
       },
       "source": [
         "lapply(packages , library, character.only = TRUE)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Loading required package: sp\n",
+            "\n",
+            "Warning message in system(\"timedatectl\", intern = TRUE):\n",
+            "“running command 'timedatectl' had status 1”\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[[1]]\n",
+              "[1] \"raster\"    \"sp\"        \"stats\"     \"graphics\"  \"grDevices\" \"utils\"    \n",
+              "[7] \"datasets\"  \"methods\"   \"base\"     \n",
+              "\n",
+              "[[2]]\n",
+              " [1] \"RStoolbox\" \"raster\"    \"sp\"        \"stats\"     \"graphics\"  \"grDevices\"\n",
+              " [7] \"utils\"     \"datasets\"  \"methods\"   \"base\"     \n",
+              "\n",
+              "[[3]]\n",
+              " [1] \"ggplot2\"   \"RStoolbox\" \"raster\"    \"sp\"        \"stats\"     \"graphics\" \n",
+              " [7] \"grDevices\" \"utils\"     \"datasets\"  \"methods\"   \"base\"     \n",
+              "\n",
+              "[[4]]\n",
+              " [1] \"gridExtra\" \"ggplot2\"   \"RStoolbox\" \"raster\"    \"sp\"        \"stats\"    \n",
+              " [7] \"graphics\"  \"grDevices\" \"utils\"     \"datasets\"  \"methods\"   \"base\"     \n"
+            ],
+            "text/latex": "\\begin{enumerate}\n\\item \\begin{enumerate*}\n\\item 'raster'\n\\item 'sp'\n\\item 'stats'\n\\item 'graphics'\n\\item 'grDevices'\n\\item 'utils'\n\\item 'datasets'\n\\item 'methods'\n\\item 'base'\n\\end{enumerate*}\n\n\\item \\begin{enumerate*}\n\\item 'RStoolbox'\n\\item 'raster'\n\\item 'sp'\n\\item 'stats'\n\\item 'graphics'\n\\item 'grDevices'\n\\item 'utils'\n\\item 'datasets'\n\\item 'methods'\n\\item 'base'\n\\end{enumerate*}\n\n\\item \\begin{enumerate*}\n\\item 'ggplot2'\n\\item 'RStoolbox'\n\\item 'raster'\n\\item 'sp'\n\\item 'stats'\n\\item 'graphics'\n\\item 'grDevices'\n\\item 'utils'\n\\item 'datasets'\n\\item 'methods'\n\\item 'base'\n\\end{enumerate*}\n\n\\item \\begin{enumerate*}\n\\item 'gridExtra'\n\\item 'ggplot2'\n\\item 'RStoolbox'\n\\item 'raster'\n\\item 'sp'\n\\item 'stats'\n\\item 'graphics'\n\\item 'grDevices'\n\\item 'utils'\n\\item 'datasets'\n\\item 'methods'\n\\item 'base'\n\\end{enumerate*}\n\n\\end{enumerate}\n",
+            "text/markdown": "1. 1. 'raster'\n2. 'sp'\n3. 'stats'\n4. 'graphics'\n5. 'grDevices'\n6. 'utils'\n7. 'datasets'\n8. 'methods'\n9. 'base'\n\n\n\n2. 1. 'RStoolbox'\n2. 'raster'\n3. 'sp'\n4. 'stats'\n5. 'graphics'\n6. 'grDevices'\n7. 'utils'\n8. 'datasets'\n9. 'methods'\n10. 'base'\n\n\n\n3. 1. 'ggplot2'\n2. 'RStoolbox'\n3. 'raster'\n4. 'sp'\n5. 'stats'\n6. 'graphics'\n7. 'grDevices'\n8. 'utils'\n9. 'datasets'\n10. 'methods'\n11. 'base'\n\n\n\n4. 1. 'gridExtra'\n2. 'ggplot2'\n3. 'RStoolbox'\n4. 'raster'\n5. 'sp'\n6. 'stats'\n7. 'graphics'\n8. 'grDevices'\n9. 'utils'\n10. 'datasets'\n11. 'methods'\n12. 'base'\n\n\n\n\n\n",
+            "text/html": [
+              "<ol>\n",
+              "\t<li><style>\n",
+              ".list-inline {list-style: none; margin:0; padding: 0}\n",
+              ".list-inline>li {display: inline-block}\n",
+              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+              "</style>\n",
+              "<ol class=list-inline><li>'raster'</li><li>'sp'</li><li>'stats'</li><li>'graphics'</li><li>'grDevices'</li><li>'utils'</li><li>'datasets'</li><li>'methods'</li><li>'base'</li></ol>\n",
+              "</li>\n",
+              "\t<li><style>\n",
+              ".list-inline {list-style: none; margin:0; padding: 0}\n",
+              ".list-inline>li {display: inline-block}\n",
+              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+              "</style>\n",
+              "<ol class=list-inline><li>'RStoolbox'</li><li>'raster'</li><li>'sp'</li><li>'stats'</li><li>'graphics'</li><li>'grDevices'</li><li>'utils'</li><li>'datasets'</li><li>'methods'</li><li>'base'</li></ol>\n",
+              "</li>\n",
+              "\t<li><style>\n",
+              ".list-inline {list-style: none; margin:0; padding: 0}\n",
+              ".list-inline>li {display: inline-block}\n",
+              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+              "</style>\n",
+              "<ol class=list-inline><li>'ggplot2'</li><li>'RStoolbox'</li><li>'raster'</li><li>'sp'</li><li>'stats'</li><li>'graphics'</li><li>'grDevices'</li><li>'utils'</li><li>'datasets'</li><li>'methods'</li><li>'base'</li></ol>\n",
+              "</li>\n",
+              "\t<li><style>\n",
+              ".list-inline {list-style: none; margin:0; padding: 0}\n",
+              ".list-inline>li {display: inline-block}\n",
+              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+              "</style>\n",
+              "<ol class=list-inline><li>'gridExtra'</li><li>'ggplot2'</li><li>'RStoolbox'</li><li>'raster'</li><li>'sp'</li><li>'stats'</li><li>'graphics'</li><li>'grDevices'</li><li>'utils'</li><li>'datasets'</li><li>'methods'</li><li>'base'</li></ol>\n",
+              "</li>\n",
+              "</ol>\n"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -205,7 +297,7 @@
         "names(mato_grosso_2006) <- c(\"nir\", \"red\", \"green\")\n",
         "mato_grosso_1992"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -276,7 +368,7 @@
         "mato_grosso_2006.res <- aggregate(mato_grosso_2006, fun=mean, fact=2)\n",
         "mato_grosso_2006.res"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -305,7 +397,7 @@
         "id": "PON7qgfLRyY_"
       },
       "source": [
-        "### Visualization of spatial data\n",
+        "## Visualization of spatial data\n",
         "Several generic functions have been implemented for \"raster\" objects to create maps and other plot types. For example, use [plot](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/plot) function to create a map of a raster object.\n",
         "In addition, individual bands can be combined into a single image by assigning individual layers or bands to one of the three color channels (red, green and blue). \n",
         "The [plotRGB](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/plotRGB) function can be used to make \"true (or false) color images\" from multi-band satellite images.\n",
@@ -331,7 +423,7 @@
         "plotRGB(mato_grosso_1992, r=1, g=2, b=3, stretch=\"lin\")\n",
         "plotRGB(mato_grosso_2006.res, r=1, g=2, b=3, stretch=\"lin\")"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -384,6 +476,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "HC308_t3jksh"
+      },
+      "source": [
+        "## Image Classification\n",
+        "The classification of remotely sensed images consists in associating each pixel of the image with a specific class or category (e.g. grassland, forest, water, soil, etc.).\n",
+        "Identification occurs through a process in which the degree of spectral similarity or association is high between pixels of the same category and low between pixels of distinct categories.\n",
+        "\n",
+        "It uses unsupervised learning methods to classify the two images of Mato Grosso in Brazil. Define a number of classes k to estimate the forest area lost from 1992 to 2006 or changes in land cover."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7Y1JQAcB8WDz"
       },
       "source": [
@@ -422,6 +527,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iy-ooo6zkbz_"
+      },
+      "source": [
+        "## How much forest area has been lost?"
+      ]
     },
     {
       "cell_type": "code",
