Creato con Colaboratory

--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOe6cENJuJNHOjafWMB46C4"
+      "authorship_tag": "ABX9TyM8C5vvwb/EEUGM8KeJCF+W"
     },
     "kernelspec": {
       "name": "ir",
@@ -398,11 +398,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "e_9rbl7S0GBm",
-        "outputId": "091ddc56-fcf6-4a8b-a3f0-abd0c7c3a6f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        }
+        },
+        "outputId": "091ddc56-fcf6-4a8b-a3f0-abd0c7c3a6f6"
       },
       "source": [
         "cl <- colorRampPalette(c('yellow','blue','red'))(3)\n",
@@ -434,7 +434,9 @@
         "id": "FPhqbjyUIvMS"
       },
       "source": [
-        ""
+        "The spatial patterns identified represent the main land cover classes: red indicates forest (cluster 2), yellow indicates agricultural areas (cluster 1) and finally blue indicates waterways and wetlands (cluster 3).\n",
+        "\n",
+        "Typically, unsupervised algorithms make inferences from datasets using only input vectors without referring to known or labeled results. Therefore the content of each class should be validated in the field or compared with other data demonstrating belonging to the chosen land cover type. This step is very important and is useful for defining the accuracy of the classification model used."
       ]
     },
     {
@@ -479,7 +481,13 @@
         "id": "0jS53c93KAhF"
       },
       "source": [
-        ""
+        "Also in this case the application of the same scheme seen previously facilitates the visual comparison.\n",
+        "\n",
+        "\n",
+        "*   red indicates forest cluster 2);\n",
+        "*   yellow indicates agricultural areas (cluster 1) \n",
+        "*   and finally blue indicates waterways and wetlands (cluster 3)\n",
+        "\n"
       ]
     },
     {
